--- a/src/App.scss
+++ b/src/App.scss
@@ -36,6 +36,7 @@ html {
   width: 100%;
 
   display: flex;
+  flex-direction: column;
   align-items: center;
   align-content: center;
   justify-content: center;
