--- a/src/Components/Styling/FourZeroFour.scss
+++ b/src/Components/Styling/FourZeroFour.scss
@@ -1,12 +1,51 @@
+@import '../../colors';
+
 .FourZeroFour {
-  height: Calc(100vh - 80px);
+  display: grid;
+  grid-template-rows: 10vh repeat(3, max-content);
+  grid-gap: 16px;
+  overflow: hidden;
+
+  min-height: Calc(100vh - 80px);
+  width: 100vw;
+  transform: translateX(-6%);
+  background: #fefefe;
+
+  color: rgb($base-color);
+
+  user-select: none;
+
+  h1, h2 {
+    margin: 0px;
+    font-family: Arial, sans-serif;
+    font-style: normal;
+    font-weight: normal;
+  }
 
   h1 {
-    font-size: 10em;
+    font-size: 6vw;
+    white-space: pre;
+
   }
 
+  h2 {
+    font-size: 3vw;
+    white-space: pre;
+  }
+
+
   a {
-    color: var(--color-text);
+    color: rgb($base-color);
     text-decoration: none;
   }
+
+  img {
+    margin: auto;
+    width: 40vw;
+    max-width: 50%;
+  }
+}
+
+.--shadow {
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
 }
