--- a/src/Components/Styling/header.scss
+++ b/src/Components/Styling/header.scss
@@ -1,13 +1,26 @@
 .Header {
+  width: 100%;
+  height: 40px;
+
+  display: flex;
+  align-items: center;
+  text-align: center;
+
+  z-index: 99;
+}
+
+#HeaderContainer {
+  width: 90%;
+  margin: auto;
+
   display: flex;
   align-items: center;
   text-align: center;
   justify-content: space-between;
 
-  height: 40px;
-  width: 100%;
-
   user-select: none;
+
+  background-color: rgb(var(--color-page-background));
 
   & a {
     text-decoration: none;
