--- a/src/_colors.scss
+++ b/src/_colors.scss
@@ -1,7 +1,7 @@
-$base-color: 14 14 14;
-$text-color: 254 254 254;
-$day-background: 52 103 132;
-$blue: 23 51 115;
-$lightblue: 30 136 229;
-$red: 249 63 50;
-$white: 248 249 250;
+$base-color: 14, 14, 14;
+$text-color: 254, 254, 254;
+$day-background: 52, 103, 132;
+$blue: 23, 51, 115;
+$lightblue: 30, 136, 229;
+$red: 249, 63, 50;
+$white: 248, 249, 250;
