--- a/src/Components/Styling/container.scss
+++ b/src/Components/Styling/container.scss
@@ -5,6 +5,7 @@
   min-height: Calc(100vh - 80px);
 
   display: grid;
+  grid-template-rows: repeat(2, max-content) auto;
   grid-gap: 15px;
 
 }
@@ -19,7 +20,7 @@
 
 .HeadContainer {
   display: grid;
-  grid-template-columns: 1fr;
+  grid-template-columns: 1fr 1fr;
   width: 100%;
 
   user-select: none;
@@ -28,7 +29,7 @@
 
   .HeadContainer__DateNav {
     display: grid;
-    grid-template-columns: repeat(4, minmax(40px, max-content));
+    grid-template-columns: repeat(4, 0.08fr);
     grid-auto-rows: 84px;
     grid-gap: 5px;
     //grid-template-rows: 1fr;
@@ -62,7 +63,7 @@
     .HeadContainer__Button {
       padding: 0;
       background: initial;
-      color: rgb($text-color);
+      color: rgb(var(--color-text));
       border: none;
       cursor: pointer;
 
@@ -84,9 +85,13 @@
 
 
     font-size: 24px;
-    line-height: 28px;
+    line-height: 48px;
 
     font-weight: 200;
+
+    justify-content: end;
+    align-content: end;
+    align-items: end;
 
     .HeadContainer__ReleaseNav--active {
       font-weight: normal;
@@ -102,22 +107,6 @@
   }
 }
 
-.Days__WeekDays {
-  display: grid;
-  grid-template-columns: repeat(7, minmax(0, 15%));
-  grid-gap: 12px;
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  align-items: center;
-  justify-items: center;
-
-  li {
-    float: left;
-  }
-}
-
 .Days {
   //height: 100%;
   width: 100%;
@@ -129,13 +118,13 @@
   //grid-auto-columns: minmax(0, 13%);
   grid-auto-flow: row dense;
 
-  color: rgb($text-color);
+  color: rgb(var(--color-text));
 
   align-content: space-around;
   justify-content: space-between;
 
   padding: 0;
-  margin: -10px 0 0 0;
+  margin: 0;
 
   list-style: none;
 
@@ -158,7 +147,6 @@
     filter: drop-shadow(0 0 0.75rem rgba(255, 255, 255, 5%));
 
     background: rgba(255, 255, 255, 0.05);
-    //background-size: cover !important;
 
     transition: transform .2s;
 
@@ -175,7 +163,6 @@
     .Days__Day_DayNum {
       display: grid;
       justify-content: center;
-      //background: $base-color;
       background: rgba(77, 77, 77, 55%);
 
       border-radius: 50%;
@@ -192,12 +179,17 @@
 
     }
 
+    .Days__Day_DayNum:not(.Days__Day_DayNum--filledDay):hover {
+      background: rgba(var(--color-page-background), 0.8);
+      box-shadow: -4px 4px 4px 1px rgba(0, 0, 0, 0.5);
+      transition: 0.3s cubic-bezier(0.215, 0.61, 0.355, 1);
+    }
+
     .Days__Day_DayNum--mToday {
       background-color: rgba(63, 127, 191, 65%);
     }
 
     .Days__Day_DayNum--MultititleNotification {
-      display: grid;
       justify-self: end;
 
       border-radius: 5px;
@@ -270,7 +262,7 @@
   }
 
   .MultiDay {
-    background: rgb(0, 0, 0, 25%);
+    background: rgb(0, 0, 0, 0.25);
     display: grid;
     grid-template-rows: repeat(2, auto);
 
@@ -307,6 +299,28 @@
 
 }
 
+.Ongoing_Day {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: max-content;
+  grid-auto-rows: max-content;
+  grid-gap: 12px;
+  list-style: none;
+  padding: 0;
+
+  .Days__DayContainer {
+    grid-template-rows: 100px;
+    cursor: pointer;
+  }
+
+  .Days__Day {
+    .Days__Day_DayNum--MultititleNotification {
+      width: 3rem;
+    }
+  }
+
+}
+
 .Loading {
   width: 100%;
   height: 100%;
@@ -320,24 +334,42 @@
   align-content: center;
   align-items: center;
 
-  //background: rgba((var(--color-page-background)), 0.5);
-  background: rgba(#000, 0.888);
+  background: rgba((var(--color-page-background)), 0.888);
 
   font-size: 6vw;
   text-align: center;
-  //filter: grayscale(100%);
 
   transition: .2s ease-in-out;
 
-  //overflow: hidden;
   user-select: none;
   z-index: 999;
 }
 
+#Monday, #Tuesday, #Wednesday, #Thursday, #Friday, #Saturday, #Sunday {
+  grid-row: 1;
+}
+
+#Hiddenday_1, #Hiddenday_2 {
+  display: none;
+}
+
 @media (max-width: 1024px) {
-  .Days__WeekDays {
-    display: none;
+  .HeadContainer {
+    .HeadContainer__DateNav {
+      grid-auto-rows: 55px;
+
+      .HeadContainer__DateNav_DateMonth {
+        font-size: 45px;
+        line-height: 55px;
+      }
+
+      .HeadContainer__DateNav_DateYear {
+        font-size: 36px;
+        line-height: 49px;
+      }
+    }
   }
+
 
   .Days {
     display: grid;
@@ -362,20 +394,19 @@
 
     .Days__Day {
       .Days__Day_DayNum {
-        font-size: 2rem;
-        line-height: 3rem;
-        width: 3rem;
-        height: 3rem;
+        font-size: 1.8rem;
+        line-height: 2.5rem;
+        width: 2.5rem;
+        height: 2.5rem;
       }
 
       .Days__Day_CardTitle--DayTitle {
-        //font-size: 3vw;
-        font-size: Calc(1vw + 12px);
+        font-size: Calc(1vw + 10px);
         line-height: 4vw;
       }
 
       .Days__Day_CardTitle--DaySubtitle {
-        font-size: Calc(1vw + 10px);
+        font-size: Calc(1vw + 8px);
         line-height: 3vw;
       }
 
@@ -384,31 +415,57 @@
       }
     }
   }
+  .Ongoing_Day {
+    grid-gap: 16px;
+
+    .Days__DayContainer {
+      grid-template-rows: 140px;
+      cursor: pointer;
+    }
+
+    .Days__Day {
+      .Days__Day_DayNum--MultititleNotification {
+        width: 5rem;
+      }
+    }
+
+  }
+  #Thursday, #Friday, #Saturday {
+    grid-row: 3;
+  }
+  #Sunday, #Hiddenday {
+    grid-row: 5;
+    display: list-item;
+  }
 }
 
 @media (max-width: 700px) {
-  .Days__WeekDays {
-    display: none;
-  }
   .HeadContainer {
+    grid-template-columns: 1fr;
+
     .HeadContainer__DateNav {
       grid-auto-rows: 55px;
 
-      .HeadContainer__DateNav_DateMonth {
-        font-size: 45px;
-        line-height: 55px;
-      }
+      //.HeadContainer__DateNav_DateMonth {
+      //  font-size: 45px;
+      //  line-height: 55px;
+      //}
 
-      .HeadContainer__DateNav_DateYear {
-        font-size: 36px;
-        line-height: 49px;
-      }
+      //.HeadContainer__DateNav_DateYear {
+      //  font-size: 36px;
+      //  line-height: 49px;
+      //}
+    }
+
+    .HeadContainer__ReleaseNav {
+      font-size: 20px;
     }
   }
 
+
   .Days {
     display: grid;
-    grid-template-columns: 1fr;
+    grid-template-columns: 1fr 1fr;
     grid-gap: 16px;
 
     .Days__Day {
@@ -422,5 +479,19 @@
       padding: 15px;
     }
   }
+  #Wednesday, #Thursday {
+    grid-row: 3;
+  }
+  #Friday, #Saturday {
+    grid-row: 5;
+  }
+  #Sunday, #Hiddenday_1 {
+    display: list-item;
+    grid-row: 7;
+  }
+  #Hiddenday_2 {
+    display: none;
+  }
+
 
 }
