--- a/src/Components/Styling/footer.css
+++ b/src/Components/Styling/footer.css
@@ -6,7 +6,8 @@
     justify-content: space-between;
     align-items: center;
     align-content: center;
-    color: #fefefe;
+    color: rgb(var(--color-text));
+    margin-top: 12px;
 }
 .Footer .Footer__Right {
   display: flex;
@@ -44,7 +45,7 @@
 }
 .Footer .Footer__Left img {
     display: block;
-    fill: #fefefe;
+    fill: rgb(var(--color-text));
     transition: 0.3s linear;
 }
 
