--- a/src/Components/Styling/header.css
+++ b/src/Components/Styling/header.css
@@ -49,9 +49,8 @@
     display: flex;
     align-items: center;
     text-align: right;
-}
-.Menu:nth-child(1) {
     padding: 0 15px 0 15px;
+    transform: translateX(15px);
 }
 
 /*# sourceMappingURL=header.css.map */
